<resources>
    <string name="app_name">DemoApplication</string>
    <string name="openFloatWin">开启浮窗</string>
    <string name="openAccessibilityService">开启无障碍服务</string>
    <string name="btnStartText">开始</string>
    <string name="textTime">时间</string>
    <string name="textDistance">距离</string>
    <string name="textPeopleNumber">人数</string>
    <string name="textMileage">里程</string>
    <string name="textPrice">价格</string>
    <string name="textScore">可接分</string>
    <string name="textFloatWinTile">浮窗标题</string>
    <string name="readme">使用说明书</string>
    <string name="autoRun">自动运行</string>
    <string name="getWinInfo">获取窗口信息</string>
    <string name="logInfo">日志信息</string>
</resources>